# RP_pico_W_board_remote_controller_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: pico_serial_command_sender.h  pico_serial_controller.h
scripts/: build.sh  install.sh  run.sh
src/: pico_serial_command_sender.cpp  pico_serial_controller.cpp
